--- a/content/payments/umap/api-integration/merchants.mdx
+++ b/content/payments/umap/api-integration/merchants.mdx
@@ -5,31 +5,30 @@ order: 2
 visible_in_sidebar: true
 ---
 
-<Card padding="nano" shape="rounded" marginBottom="micro">
-    <Text size="medium" marginBottom="none" paddingRight="medium"> 
-        <strong>Prerequesites - </strong>
-        <a href="/payments/umap/quickstart/merchants">
-            Merchant Quickstart ↗ 
-        </a>
-    </Text>
-</Card>
-
 ## Merchant API Integration
 
-Once a merchant has onboarded onto UMAP and has their API credentials, the next step is to choose the right product for your usecase. 
+<Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
+    <Text size="medium" marginBottom="nano" paddingRight="medium" weight="600">
+        Prerequesites
+    </Text>
+    <a href="/payments/umap/quickstart/merchants">Merchant Quickstart ↗</a>
+</Card>
+
+Once a merchant has onboarded onto UMAP and has their API credentials, the next step is to choose the right product for your usecase.
 
 ### What can you do with UMAP?
+
 ##### Payments
 
-* Offer QR code and payment links for customers in-store or via apps and messaging.
-* Enhance guest checkout with direct UPI collect payments on preferred UPI apps.
-* For BFSI merchants, comply with regulations through Third Party Validation(TPV).
+-   Offer QR code and payment links for customers in-store or via apps and messaging.
+-   Enhance guest checkout with direct UPI collect payments on preferred UPI apps.
+-   For BFSI merchants, comply with regulations through Third Party Validation(TPV).
 
 ##### Autopay
 
-* Use one-time mandates to clear limited stock exclusively for designated customers.
-* Instantly create service subscriptions with UPI Autopay for recurring payments.
-* Replicate wallet functionality with single block multi-debit mandates from savings accounts.
+-   Use one-time mandates to clear limited stock exclusively for designated customers.
+-   Instantly create service subscriptions with UPI Autopay for recurring payments.
+-   Replicate wallet functionality with single block multi-debit mandates from savings accounts.
 
 <hr class="primary" />
 
@@ -43,7 +42,9 @@ Once a merchant has onboarded onto UMAP and has their API credentials, the next 
                     <Text size="large" weight="600" textColor="blue-90">
                         Payments
                     </Text>
-                    <Text weight="400">Start accepting UPI payments with QR, Collect & TPV.</Text>
+                    <Text weight="400">
+                        Start accepting UPI payments with QR, Collect & TPV.
+                    </Text>
                 </Element>
             </Link>
         </Card>
@@ -55,7 +56,9 @@ Once a merchant has onboarded onto UMAP and has their API credentials, the next 
                     <Text size="large" weight="600" textColor="blue-90">
                         Mandates
                     </Text>
-                    <Text weight="400">Start accepting recurring payments with UPI Autopay.</Text>
+                    <Text weight="400">
+                        Start accepting recurring payments with UPI Autopay.
+                    </Text>
                 </Element>
             </Link>
         </Card>
