--- a/content/payments/umap/merchant-onboarding.mdx
+++ b/content/payments/umap/merchant-onboarding.mdx
@@ -5,55 +5,64 @@ order: 2
 visible_in_sidebar: true
 ---
 
-
-<Card padding="nano" shape="rounded" marginBottom="micro">
-    <Text size="medium" marginBottom="none" paddingRight="medium"> 
-        <strong>Prerequesites - </strong>
-        <a href="/payments/umap/api-integration/aggregators">
-            Aggregator API Integration ↗ 
-        </a>
-    </Text>
-</Card>
-
 ## Merchant Onboarding
 
-A aggregator can seamlessly integrate merchants into the UMAP ecosystem, enabling them to start accepting UPI payments. This journey involves initial information collection to the final activation of the merchant’s ability to process transactions.
+<Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
+    <Text size="medium" marginBottom="nano" paddingRight="medium" weight="600">
+        Prerequesites
+    </Text>
+    <a href="/payments/umap/api-integration/aggregators">
+        Aggregator API Integration ↗
+    </a>
+</Card>
+
+An Aggregator can seamlessly integrate merchants into the UMAP ecosystem, enabling them to start accepting UPI payments. This journey involves initial information collection to the final activation of the merchant’s ability to process transactions.
 
 <hr class="primary" />
 
 #### Step 1 - Information Collection
+
 The journey begins with the operations team gathering all necessary details from the merchant. This step is foundational, ensuring that the UMAP system has all the relevant information to proceed with the onboarding process.
 
 <hr class="primary" />
 
 #### Step 2 - Create a Merchant
+
 Upon collecting the merchant's information, a preliminary verification is conducted. The merchant's record is then created in the UMAP system, marking the formal initiation of their onboarding journey.
 
-<a href="/payments/umap/merchant-onboarding/create-merchant-api"target="_blank">
-<code>Create Merchant API</code> ↗
+<a
+    href="/payments/umap/merchant-onboarding/create-merchant-api"
+    target="_blank"
+>
+    <code>Create Merchant API</code> ↗
 </a>
 
 <hr class="primary" />
 
 #### Step 3 - VPA Creation
+
 If the VPA is available, it is created and assigned to the merchant. This final step equips the merchant with the capability to accept payments via UPI, completing the onboarding process and marking the beginning of their transaction journey on the UMAP platform.
 
-<a href="/payments/umap/merchant-onboarding/create-vpa-api"target="_blank">
-<code>Create VPA API</code> ↗
+<a href="/payments/umap/merchant-onboarding/create-vpa-api" target="_blank">
+    <code>Create VPA API</code> ↗
 </a>
 
 ###### Checking VPA Availability (optional)
+
 Before a merchant can start transactions, they need a Virtual Payment Address (VPA). The system checks for the availability of the desired VPA, ensuring it's unique and can be assigned to the merchant without conflicts.
 
-<a href="/payments/umap/merchant-onboarding/check-vpa-availability-api"target="_blank">
-<code>Check VPA Availability API</code> ↗
+<a
+    href="/payments/umap/merchant-onboarding/check-vpa-availability-api"
+    target="_blank"
+>
+    <code>Check VPA Availability API</code> ↗
 </a>
 
 By meticulously following these steps, UMAP ensures a smooth and efficient onboarding experience for merchants, setting the stage for their successful integration into the digital payments landscape.
 
 <img
-  src="https://storage.googleapis.com/strapi-assets/latest/Frame_108/Frame_108.png"
-  alt="Bridge"
+    src="https://storage.googleapis.com/strapi-assets/latest/Frame_108/Frame_108.png"
+    alt="Bridge"
 />
 
 <hr class="primary" />
@@ -61,17 +70,25 @@ By meticulously following these steps, UMAP ensures a smooth and efficient onboa
 ## Merchant Operations
 
 #### Merchant Txn Status Updation
-If a merchant needs to be disabled by an aggregator then they can call this API to update their transaction status. If a merchant is disabled UMAP will decline all transactions to the merchant VPA. 
 
-<a href="/payments/umap/api-reference#/category~merchant/operation~merchant#updateTxnStatus"target="_blank">
-<code>Update Merchant Transaction Status API</code> ↗
+If a merchant needs to be disabled by an aggregator then they can call this API to update their transaction status. If a merchant is disabled UMAP will decline all transactions to the merchant VPA.
+
+<a
+    href="/payments/umap/api-reference#/category~merchant/operation~merchant#updateTxnStatus"
+    target="_blank"
+>
+    <code>Update Merchant Transaction Status API</code> ↗
 </a>
 
-####  Merchant Record Updation
+#### Merchant Record Updation
+
 This API can be called to update the information associated with the merchant like settlement configs, KYC information that may be required for accepting different payment instruments on UPI.
 
-<a href="/payments/umap/api-reference#/category~merchant/operation~merchant#updateConfig"target="_blank">
-<code>Update Merchant Configs API</code> ↗
+<a
+    href="/payments/umap/api-reference#/category~merchant/operation~merchant#updateConfig"
+    target="_blank"
+>
+    <code>Update Merchant Configs API</code> ↗
 </a>
 
 <hr class="primary" />
