--- a/content/payments/umap/quickstart.mdx
+++ b/content/payments/umap/quickstart.mdx
@@ -18,18 +18,20 @@ UMAP caters for two specific types of users, `Aggregators` and `Merchants`. Befo
 Aggregators are online and offline platforms that onboard multiple businesses and provide them value added services.
 
 ###### Examples
-* Food delivery app that onboards multiple restaurants and provides delivery riders for them.
-* Website creation platform that has a storefront that plugin providers can integrate.
-* Insurance and Loan marketplaces that can be used by any distributors to sell to customers.
+
+-   Food delivery app that onboards multiple restaurants and provides delivery riders for them.
+-   Website creation platform that has a storefront that plugin providers can integrate.
+-   Insurance and Loan marketplaces that can be used by any distributors to sell to customers.
 
 ### Merchants
 
 Merchants are online and offline businesses that provide goods and services directly to customers.
 
 ###### Examples
-* Loan providers who enable customers to get credit into their account and enable collections for repayment.
-* Direct to Consumer Brands who want to enable UPI as a payment option on their website/app or messaging channels.
-* Streaming platforms who provide online services for education & entertainment through subscriptions & one time plans.
+
+-   Loan providers who enable customers to get credit into their account and enable collections for repayment.
+-   Direct to Consumer Brands who want to enable UPI as a payment option on their website/app or messaging channels.
+-   Streaming platforms who provide online services for education & entertainment through subscriptions & one time plans.
 
 <br />
 
@@ -38,9 +40,9 @@ Merchants are online and offline businesses that provide goods and services dire
 <Row>
     <Portion desktopSpan="half">
         <Card padding="small" shape="rounded">
-            <a href="/payments/umap/quickstart/aggregators">
+            <Link href="/payments/umap/quickstart/aggregators">
                 Aggregators
-            </a>
+            </Link>
             <p>
                 Use this section to proceed with integration of UMAP as
                 Aggregators
@@ -49,9 +51,7 @@ Merchants are online and offline businesses that provide goods and services dire
     </Portion>
     <Portion desktopSpan="half">
         <Card padding="small" shape="rounded">
-            <a href="/payments/umap/quickstart/merchants">
-                Merchants
-            </a>
+            <Link href="/payments/umap/quickstart/merchants">Merchants</Link>
             <p>
                 Use this section to proceed with integration of UMAP as
                 Merchants
