--- a/content/payments/umap/quickstart/merchants.mdx
+++ b/content/payments/umap/quickstart/merchants.mdx
@@ -7,40 +7,44 @@ visible_in_sidebar: true
 
 ## UMAP Quickstart for Merchants
 
-<Callout type='warning'>
-💡 This quickstart is for a merchant, if you are an aggregator, please refer to 
-    <a href="#/payments/umap/quickstart" target="_blank">&nbsp;Quickstart</a>
+This guide will help you get started with UMAP integration as a Merchant
+
+<Callout type="tip">
+    This quickstart is for a merchant, if you are an aggregator, please refer to{" "}
+    <Link href="/payments/umap/quickstart" target="_blank">
+        Quickstart
+    </Link>
 </Callout>
 
-
-This guide will help you get started with UMAP integration as an Merchant.
+<br />
 
 ### What is an Merchant
-A merchant on UMAP is any business that wants to collect UPI payments from their customers to provide goods & services or use UPI autopay for setting up recurring payments like subscriptions with their customers.  
+
+A merchant on UMAP is any business that wants to collect UPI payments from their customers to provide goods & services or use UPI autopay for setting up recurring payments like subscriptions with their customers.
 
 <hr class="primary" />
-
 
 ### Get started
 
 ##### Step 1 - Register on Bridge
-Merchants can integrate with UMAP by directly registering themselves on Setu's bridge which will serve as the command center for all UPI products used by them. Merchants can configure payment methods,vpas, settlements, notifications & more directly from bridge.  
 
+Merchants can integrate with UMAP by directly registering themselves on Setu's bridge which will serve as the command center for all UPI products used by them. Merchants can configure payment methods,vpas, settlements, notifications & more directly from bridge.
 
 <hr class="primary" />
 
 ##### Step 2 - Get API credentials
+
 `TODO: Write about how to get api credentials`
 
 <hr class="primary" />
 
 ##### Step 3. Authorization and access
+
 `TODO: You can use the API credentials from Bridge to test UMAP on sandbox`
 
 <NextPage
     info={{
-        description:
-            "Get started with configuring UPI products",
+        description: "Get started with configuring UPI products",
         slug: "/payments/umap/api-integration/merchants",
         title: "API Integration",
     }}
