--- a/content/payments/umap/refunds-disputes.mdx
+++ b/content/payments/umap/refunds-disputes.mdx
@@ -7,116 +7,203 @@ visible_in_sidebar: true
 
 ## Refunds & Disputes
 
-<Card padding="nano" shape="rounded" marginBottom="micro">
-    <Text size="medium" marginBottom="none" paddingRight="medium"> 
-        <strong>Prerequesites - </strong>
-        <a href="/payments/umap/quickstart">
-            Quickstart ↗ 
-        </a>
+<Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
+    <Text size="medium" marginBottom="nano" paddingRight="medium" weight="600">
+        Prerequesites
     </Text>
+    <a href="/payments/umap/quickstart">Quickstart ↗</a>
 </Card>
 
-<hr class="primary"/>
+<hr class="primary" />
 
 UMAP empowers merchants with direct API access to issue refunds and contest disputes efficiently, leveraging the NPCI's UDIR framework. This system streamlines communication and resolution processes, ensuring merchants have control and visibility over transaction reversals and customer disputes.
 
 This comprehensive approach ensures that merchants can efficiently manage refunds and disputes, offering a streamlined mechanism to resolve customer issues directly and maintain high levels of satisfaction.
 
 <Tabs
-  tabs={[
-    {
-      key: "tab1",
-      label: "Refunds",
-      content: (
-        <Text>
-            <h4>Refund Process</h4>
-            <img
-                src="https://storage.googleapis.com/strapi-assets/latest/refund-flow-online_flow/refund-flow-online_flow.png"
-                alt="Bridge"
-            />
-            <hr class="primary"/>
-            <h6>Step 1 - issuing refunds</h6>
-            <p>Merchants can initiate refunds through <b>create refund API</b> by submitting the details of the original transaction.</p>
-            <p>UMAP coordinates with NPCI to process the refund, ensuring the amount is returned to the customer's account.</p>
-            <p>Throughout the refund process, UMAP provides merchants with timely updates regarding the refund status, ensuring transparency and allowing merchants to keep their customers informed.</p>
-            <p>UMAP sends notifications to the merchants for the following events:</p>
-            <ul>
-                <li><b>refund.sucess</b> (if refund is successful)</li>
-                <li><b>refund.failed</b> (if refund fails)</li>
-            </ul>
-            <p>Read more about refund status notifications <a href="/payments/umap/notifications/refunds">here</a></p>
-            <hr class="tertiary"/>
-            <h6>Step 2 - check refund status</h6>
-            <p>In addition to the notifications, merchants can use <b>check refund status API</b> to check if a refund is successful</p>
-            <hr class="primary"/>
-            <h4>Refund Statuses</h4>
-            <li><code>Refund Initiated :</code> Refund request has been create at UMAP</li>
-            <li><code>Refund Pending :</code> Refund is in queue for being processed</li>
-            <li><code>Refund Successful :</code> Refund has been successfully completed</li>
-            <li><code>Refund Failed :</code> Refund could not be processed</li>
-            <img
-                src="https://storage.googleapis.com/strapi-assets/latest/Frame_74/Frame_74.png"
-                alt="Bridge"
-            />
-            <NextPage
-                info={{
-                    description: "Create refund.  ",
-                    slug: "/payments/umap/refunds-disputes/create-refund-api",
-                    title: "Create Refund",
-                }}
-            />
-        </Text>
-        ),
-    },
-    {
-      key: "tab2",
-      label: "Disputes",
-      content: (
-        <Text>
-            <h4>Dispute Resolution</h4>
-            <p>The UMAP platform's seamless integration with the UDIR framework ensures that merchants can provide prompt and efficient resolutions to disputes, safeguarding both their interests and those of their customers.</p>
-            <hr class="primary"/>
-            <h6>Step 1 - dispute initiation</h6>
-            <p>Disputes are initiated by customers and communicated to UMAP via NPCI.</p>
-            <p>Upon receiving a dispute notification, UMAP promptly informs the merchant of the dispute details.</p>
-            <p>UMAP sends notifications to merchants for the following events:</p>
-            <ul>
-                <li><b>dispute.created</b></li>
-            </ul>
-            <p>Read more about dispute status notifications <a href="/payments/umap/notifications/disputes">here</a></p>
-            <hr class="tertiary"/>
-            <h6>Step 2 - merchant response</h6>
-            <p>Merchants have the option to either accept or reject the dispute through UMAP:</p>
-            <b>Accepting a Dispute:</b>
-            <p>Agreeing to the dispute automatically triggers a refund to the customer for the disputed transaction.</p>
-            <b>Rejecting a Dispute:</b>
-            <p>To contest a dispute, merchants must provide transaction evidence, such as an invoice, which UMAP forwards to NPCI for review.</p>
-            <hr class="tertiary"/>
-            <h6>Step 3 - review outcome</h6>
-            <b>Merchant Wins:</b>
-            <p>If the review process favors the merchant, the dispute is closed with no refund required.</p>
-            <b>Merchant Loses:</b>
-            <p>If the merchant does not prevail, a refund is issued to the customer for the disputed transaction.</p>
-            <hr class="primary"/>
-            <h4>Dispute Statuses</h4>
-            <li><code>Dispute Open :</code> A dispute has been created by a customer</li>
-            <li><code>Dispute Closed :</code> Merchant accepted dispute and issued a refund</li>
-            <li><code>Dispute In-Review :</code> Merchant has contested dispute and has provided evidence</li>
-            <li><code>Dispute Won :</code> Merchant evidence accepted. No chargeback required</li>
-            <li><code>Dispute Lost :</code> Merchant evidence rejected. Chargeback is created </li>
-            <img
-                src="https://storage.googleapis.com/strapi-assets/latest/Frame_73/Frame_73.png"
-                alt="Bridge"
-            />
-            <NextPage
-                info={{
-                    description: "Fetch dispute.  ",
-                    slug: "/payments/umap/refunds-disputes/fetch-dispute-api",
-                    title: "Fetch Dispute",
-                }}
-            />
-        </Text>
-      ),
-    },
-  ]}
+    tabs={[
+        {
+            key: "tab1",
+            label: "Refunds",
+            content: (
+                <Text>
+                    <h4>Refund Process</h4>
+                    <img
+                        src="https://storage.googleapis.com/strapi-assets/latest/refund-flow-online_flow/refund-flow-online_flow.png"
+                        alt="Bridge"
+                    />
+                    <hr class="primary" />
+                    <h6>Step 1 - issuing refunds</h6>
+                    <p>
+                        Merchants can initiate refunds through{" "}
+                        <b>create refund API</b> by submitting the details of
+                        the original transaction.
+                    </p>
+                    <p>
+                        UMAP coordinates with NPCI to process the refund,
+                        ensuring the amount is returned to the customer's
+                        account.
+                    </p>
+                    <p>
+                        Throughout the refund process, UMAP provides merchants
+                        with timely updates regarding the refund status,
+                        ensuring transparency and allowing merchants to keep
+                        their customers informed.
+                    </p>
+                    <p>
+                        UMAP sends notifications to the merchants for the
+                        following events:
+                    </p>
+                    <ul>
+                        <li>
+                            <b>refund.sucess</b> (if refund is successful)
+                        </li>
+                        <li>
+                            <b>refund.failed</b> (if refund fails)
+                        </li>
+                    </ul>
+                    <p>
+                        Read more about refund status notifications{" "}
+                        <a href="/payments/umap/notifications/refunds">here</a>
+                    </p>
+                    <hr class="tertiary" />
+                    <h6>Step 2 - check refund status</h6>
+                    <p>
+                        In addition to the notifications, merchants can use{" "}
+                        <b>check refund status API</b> to check if a refund is
+                        successful
+                    </p>
+                    <hr class="primary" />
+                    <h4>Refund Statuses</h4>
+                    <li>
+                        <code>Refund Initiated :</code> Refund request has been
+                        create at UMAP
+                    </li>
+                    <li>
+                        <code>Refund Pending :</code> Refund is in queue for
+                        being processed
+                    </li>
+                    <li>
+                        <code>Refund Successful :</code> Refund has been
+                        successfully completed
+                    </li>
+                    <li>
+                        <code>Refund Failed :</code> Refund could not be
+                        processed
+                    </li>
+                    <img
+                        src="https://storage.googleapis.com/strapi-assets/latest/Frame_74/Frame_74.png"
+                        alt="Bridge"
+                    />
+                    <NextPage
+                        info={{
+                            description: "Create refund.  ",
+                            slug: "/payments/umap/refunds-disputes/create-refund-api",
+                            title: "Create Refund",
+                        }}
+                    />
+                </Text>
+            ),
+        },
+        {
+            key: "tab2",
+            label: "Disputes",
+            content: (
+                <Text>
+                    <h4>Dispute Resolution</h4>
+                    <p>
+                        The UMAP platform's seamless integration with the UDIR
+                        framework ensures that merchants can provide prompt and
+                        efficient resolutions to disputes, safeguarding both
+                        their interests and those of their customers.
+                    </p>
+                    <hr class="primary" />
+                    <h6>Step 1 - dispute initiation</h6>
+                    <p>
+                        Disputes are initiated by customers and communicated to
+                        UMAP via NPCI.
+                    </p>
+                    <p>
+                        Upon receiving a dispute notification, UMAP promptly
+                        informs the merchant of the dispute details.
+                    </p>
+                    <p>
+                        UMAP sends notifications to merchants for the following
+                        events:
+                    </p>
+                    <ul>
+                        <li>
+                            <b>dispute.created</b>
+                        </li>
+                    </ul>
+                    <p>
+                        Read more about dispute status notifications{" "}
+                        <a href="/payments/umap/notifications/disputes">here</a>
+                    </p>
+                    <hr class="tertiary" />
+                    <h6>Step 2 - merchant response</h6>
+                    <p>
+                        Merchants have the option to either accept or reject the
+                        dispute through UMAP:
+                    </p>
+                    <b>Accepting a Dispute:</b>
+                    <p>
+                        Agreeing to the dispute automatically triggers a refund
+                        to the customer for the disputed transaction.
+                    </p>
+                    <b>Rejecting a Dispute:</b>
+                    <p>
+                        To contest a dispute, merchants must provide transaction
+                        evidence, such as an invoice, which UMAP forwards to
+                        NPCI for review.
+                    </p>
+                    <hr class="tertiary" />
+                    <h6>Step 3 - review outcome</h6>
+                    <b>Merchant Wins:</b>
+                    <p>
+                        If the review process favors the merchant, the dispute
+                        is closed with no refund required.
+                    </p>
+                    <b>Merchant Loses:</b>
+                    <p>
+                        If the merchant does not prevail, a refund is issued to
+                        the customer for the disputed transaction.
+                    </p>
+                    <hr class="primary" />
+                    <h4>Dispute Statuses</h4>
+                    <li>
+                        <code>Dispute Open :</code> A dispute has been created
+                        by a customer
+                    </li>
+                    <li>
+                        <code>Dispute Closed :</code> Merchant accepted dispute
+                        and issued a refund
+                    </li>
+                    <li>
+                        <code>Dispute In-Review :</code> Merchant has contested
+                        dispute and has provided evidence
+                    </li>
+                    <li>
+                        <code>Dispute Won :</code> Merchant evidence accepted.
+                        No chargeback required
+                    </li>
+                    <li>
+                        <code>Dispute Lost :</code> Merchant evidence rejected.
+                        Chargeback is created{" "}
+                    </li>
+                    <img
+                        src="https://storage.googleapis.com/strapi-assets/latest/Frame_73/Frame_73.png"
+                        alt="Bridge"
+                    />
+                    <NextPage
+                        info={{
+                            description: "Fetch dispute.  ",
+                            slug: "/payments/umap/refunds-disputes/fetch-dispute-api",
+                            title: "Fetch Dispute",
+                        }}
+                    />
+                </Text>
+            ),
+        },
+    ]}
 />
