--- a/content/payments/umap/api-integration.mdx
+++ b/content/payments/umap/api-integration.mdx
@@ -89,33 +89,17 @@ You can use the API credentials provided by Setu to test UMAP on sandbox
 <Row>
     <Portion desktopSpan="half">
         <Card padding="small" shape="rounded">
-            <Text
-                size="small"
-                weight="600"
-                textColor="slate-60"
-                marginBottom="micro"
-            >
-                READ NEXT &rarr;
-            </Text>
             <p>For Aggregators</p>
             <a href="/payments/umap/api-integration/aggregators" target="_self">
-                Start API integration ->
+                Start API Integration ->
             </a>
         </Card>
     </Portion>
     <Portion desktopSpan="half">
         <Card padding="small" shape="rounded">
-            <Text
-                size="small"
-                weight="600"
-                textColor="slate-60"
-                marginBottom="micro"
-            >
-                READ NEXT &rarr;
-            </Text>
             <p>For Merchants</p>
             <a href="/payments/umap/api-integration/merchants" target="_self">
-                Start API integration ->
+                Start API Integration ->
             </a>
         </Card>
     </Portion>
