--- a/content/payments/umap/api-integration/aggregators.mdx
+++ b/content/payments/umap/api-integration/aggregators.mdx
@@ -5,32 +5,26 @@ order: 1
 visible_in_sidebar: true
 ---
 
-
-<Card padding="nano" shape="rounded" marginBottom="micro">
-    <Text size="medium" marginBottom="none" paddingRight="medium"> 
-        <strong>Prerequesites - </strong>
-        <a href="/payments/umap/quickstart/aggregators">
-            Aggregator Quickstart ↗ 
-        </a>
-    </Text>
-</Card>
-
 ## Aggregator API Integration
 
-Once the aggregator has been onboarded onto bridge and business formalities have been completed, you can now proceed to integrate UMAP with your internal systems. As an aggregator you have to first create a merchant and then create products that are made available to your merchants based on your configuration.  
+<Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
+    <Text size="medium" marginBottom="nano" paddingRight="medium" weight="600">
+        Prerequesites
+    </Text>
+    <a href="/payments/umap/quickstart/aggregators">Aggregator Quickstart ↗</a>
+</Card>
+
+Once the aggregator has been onboarded onto bridge and business formalities have been completed, you can now proceed to integrate UMAP with your internal systems. As an aggregator you have to first create a merchant and then create products that are made available to your merchants based on your configuration.
 
 #### Step 1 — Configure a merchant
-An aggregator on UMAP has to first create a merchant associated with them by providing merchant's business details and creating a VPA for the merchant which will associate them to the aggregator. The aggregator can now begin configuring UPI products for the merchant.  
+
+An aggregator on UMAP has to first create a merchant associated with them by providing merchant's business details and creating a VPA for the merchant which will associate them to the aggregator. The aggregator can now begin configuring UPI products for the merchant.
 
 <Card padding="small" shape="rounded">
-    <Link href="/payments/umap/merchant-onboarding">
-        <Element as="div">
-            <Text size="large" weight="600" textColor="blue-90">
-                 Merchant Onboarding
-            </Text>
-            <Text weight="400">Create your first merchant on UMAP.</Text>
-        </Element>
-    </Link>
+    <Link href="/payments/umap/merchant-onboarding">Merchant Onboarding</Link>
+    <Text weight="400" marginTop="nano" marginBottom="none" size="small">
+        Create your first merchant on UMAP.
+    </Text>
 </Card>
 
 <hr class="primary" />
@@ -42,22 +36,28 @@ Once a merchant has been associated to your aggregator account, you can now enab
 <Row>
     <Portion desktopSpan="half">
         <Card padding="small" shape="rounded">
-            <a href="/payments/umap/payments" target="_self">
-                Payments
-            </a>
-            <p>
-                Enable UPI payments with QR, Collect & TPV for your merchants.
-            </p>
+            <Link href="payments/umap/payments">Payments</Link>
+            <Text
+                weight="400"
+                marginTop="nano"
+                marginBottom="none"
+                size="small"
+            >
+                Enable UPI payments with QR, Collect & TPV
+            </Text>
         </Card>
     </Portion>
     <Portion desktopSpan="half">
         <Card padding="small" shape="rounded">
-            <a href="/payments/umap/mandates" target="_self">
-                Mandates
-            </a>
-            <p>
-                Enable recurring payments with UPI Autopay for your merchants.
-            </p>
+            <Link href="payments/umap/mandates">Mandates</Link>
+            <Text
+                weight="400"
+                marginTop="nano"
+                marginBottom="none"
+                size="small"
+            >
+                Enable recurring payments with UPI Autopay
+            </Text>
         </Card>
     </Portion>
 </Row>
@@ -66,13 +66,11 @@ Once a merchant has been associated to your aggregator account, you can now enab
 
 #### Step 3 — Manage your merchants
 
-After creating products for your merchants on UMAP, you can also easily manage merchant operations like modifying/disabling them directly on bridge or through our merchant operations APIs.  
-
+After creating products for your merchants on UMAP, you can also easily manage merchant operations like modifying/disabling them directly on bridge or through our merchant operations APIs.
 
 <NextPage
     info={{
-        description:
-            "Create your first merchant",
+        description: "Create your first merchant",
         slug: "/payments/umap/merchant-onboarding",
         title: "Merchant Onboarding",
     }}
