--- a/content/payments/umap/notifications.mdx
+++ b/content/payments/umap/notifications.mdx
@@ -7,27 +7,55 @@ visible_in_sidebar: true
 
 ## Notifications & Alerts
 
-<Card padding="nano" shape="rounded" marginBottom="micro">
-    <Text size="medium" marginBottom="none" paddingRight="medium"> 
-        <strong>Prerequesites - </strong>
-        <a href="/payments/umap/quickstart">
-            Quickstart ↗ 
-        </a>
+<Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
+    <Text size="medium" marginBottom="nano" paddingRight="medium" weight="600">
+        Prerequesites
     </Text>
+    <a href="/payments/umap/quickstart">Quickstart ↗</a>
 </Card>
 
-<hr class="primary"/>
+<hr class="primary" />
 
-UMAP has a robust notification system to provide a transparent experience for our merchants.  
-* Repetitive retries to ensure notification delivery to customers
-* Comprehensive coverage across all financial and non-financial flows
-* Configurable notification endpoints at merchant and aggregator levels
+UMAP has a robust notification system to provide a transparent experience for our merchants.
+
+-   Repetitive retries to ensure notification delivery to customers
+-   Comprehensive coverage across all financial and non-financial flows
+-   Configurable notification endpoints at merchant and aggregator levels
 
 Understand our notification payloads for each of our products.
+
 <ul>
-    <li>Payments. Read more <a href="/payments/umap/notifications/payments" target="_blank">here</a></li>
-    <li>Mandates. Read more <a href="/payments/umap/notifications/mandates" target="_blank">here</a></li>
-    <li>Refunds. Read more <a href="/payments/umap/notifications/refunds" target="_blank">here</a></li>
-    <li>Disputes. Read more <a href="/payments/umap/notifications/disputes" target="_blank">here</a></li>
-    <li>Customer VPA Verification. Read more <a href="/payments/umap/notifications/customer-vpa-verification" target="_blank">here</a></li>
-</ul> 
+    <li>
+        Payments. Read more{" "}
+        <a href="/payments/umap/notifications/payments" target="_blank">
+            here
+        </a>
+    </li>
+    <li>
+        Mandates. Read more{" "}
+        <a href="/payments/umap/notifications/mandates" target="_blank">
+            here
+        </a>
+    </li>
+    <li>
+        Refunds. Read more{" "}
+        <a href="/payments/umap/notifications/refunds" target="_blank">
+            here
+        </a>
+    </li>
+    <li>
+        Disputes. Read more{" "}
+        <a href="/payments/umap/notifications/disputes" target="_blank">
+            here
+        </a>
+    </li>
+    <li>
+        Customer VPA Verification. Read more{" "}
+        <a
+            href="/payments/umap/notifications/customer-vpa-verification"
+            target="_blank"
+        >
+            here
+        </a>
+    </li>
+</ul>{" "}
