--- a/content/payments/umap/quickstart/aggregators.mdx
+++ b/content/payments/umap/quickstart/aggregators.mdx
@@ -7,10 +7,20 @@ visible_in_sidebar: true
 
 ## UMAP Quickstart for Aggregators
 
-This guide will help you get started with UMAP integration as an Aggregator.
+This guide will help you get started with UMAP integration as an Aggregator
+
+<Callout type="tip">
+    This quickstart is for an Aggregator, if you are a Merchant, please refer to{" "}
+    <Link href="/payments/umap/quickstart" target="_blank">
+        Quickstart
+    </Link>
+</Callout>
+
+<br />
 
 ### What is an Aggregator
-An aggregator on UMAP is a large merchant platform that onboards multiple merchants under them. It can be an online platform or large businesses that operate franchisees. An aggregator on UMAP has the ability to configure and control the payments processes for their merchants like enabling different payment methods, settlement accounts and notifications.  
+
+An aggregator on UMAP is a large merchant platform that onboards multiple merchants under them. It can be an online platform or large businesses that operate franchisees. An aggregator on UMAP has the ability to configure and control the payments processes for their merchants like enabling different payment methods, settlement accounts and notifications.
 
 You're not an Aggregator? Please refer to the [Quickstart](/payments/umap/quickstart) for other types of integration possible
 
@@ -20,9 +30,12 @@ You're not an Aggregator? Please refer to the [Quickstart](/payments/umap/quicks
 
 #### Step 1 — Start KYC and business documentation
 
-This is started once Setu’s sales team has interacted with you and finalized the solution that will best meet your needs. After that, we will need business KYC details and finalize commerical agreements. After business formalities are over, an aggregator account is created for you in the system based on the documents submitted and you can begin creating merchants!  
+This is started once Setu’s sales team has interacted with you and finalized the solution that will best meet your needs. After that, we will need business KYC details and finalize commerical agreements. After business formalities are over, an aggregator account is created for you in the system based on the documents submitted and you can begin creating merchants!
 
-<Callout type='tip'>For custom configurations for your business, reach out to <a href="">umap@setu.co</a></Callout>
+<Callout type="tip">
+    For custom configurations for your business, reach out to{" "}
+    <a href="">umap@setu.co</a>
+</Callout>
 
 <hr class="primary" />
 
@@ -40,9 +53,8 @@ You can use the API credentials provided by Setu to test UMAP on sandbox
 
 <NextPage
     info={{
-        description:
-            "Get started with integrating UPI on your platform",
-        slug: "/payments/umap/api-integration/aggregators",
+        description: "Get started with integrating UPI on your platform",
+        slug: "/payments/umap/api-integration",
         title: "API Integration",
     }}
 />
